[package]
name = "local-jcs-store"
edition = "2021"
resolver = "2"
keywords = ["json","JCS"]
categories = [
    "data-structures",
    "database-implementations",
    "encoding",
    "filesystem"
]
version="0.0.2"
publish=["crates-io"]
description="Store a directory of JSON objects, indexed by a cannonical hash"
license = "MIT"
repository = "https://github.com/anabelle2001/local-jcs-store"


[lib]

[dependencies]
color-eyre = "0.6.3"
eyre = "0.6.12"
openssl = "0.10.64"
serde = "1.0.203"
serde_jcs = "0.1.0"
serde_json = "1.0.118"
tokio = {version="1.38.0",features=["full"]}